Aggiunto il ppt, aggiunta un'altra REST API

--- a/mhw3.html
+++ b/mhw3.html
@@ -92,7 +92,7 @@
         <img id='pane' src="img/pane.jpg">
         <img id='pizza' src="img/pizza-napoletana.jpg">
         <img id='biscotti' src="img/biscotti.jpg">
-        
+        <img id='bevande' src="img/cocacola.jpg">
         <img id='tavolacalda' src="img/tavolacalda.jpg">
     </div>
     <h3 strong>Informazioni</h3>
